# Slive

./: .gitignore  ARCHITECTURE.md  EFFICIENCY_PLAN.md  README.md  setup.sh
Backend/: README.md  pyproject.toml
Backend/docs/: training.md
Backend/prompts/: README.md  assistant.md  email-reply.md  rewrite.md
Backend/samples/: known-content.aiff
Backend/src/flowy/: __init__.py  assistant.py  cli.py  core.py  local.py  local_infer.py  server.py  transcribe.py
Backend/src/flowy/training/: __init__.py  cli.py  jobs.py  models.py  pipeline.py  store.py
Backend/tests/: test_core.py  test_training_jobs.py  test_training_store.py
Frontend/: Package.resolved  Package.swift  README.md  Slive.entitlements  build.sh  permanent-setup.sh  setup-signing.sh
Frontend/Resources/: AppIcon.icns  Info.plist.template
Frontend/Sources/Flowy/: AppDelegate.swift  Settings.swift  main.swift
Frontend/Sources/Flowy/Assistant/: AssistantClient.swift  AssistantConfig.swift  KeychainStore.swift  PromptLibrary.swift  ScreenCapture.swift
Frontend/Sources/Flowy/Audio/: AudioRecorder.swift  FFTProcessor.swift  Mp3Encoder.swift
Frontend/Sources/Flowy/Backend/: BackendManager.swift
Frontend/Sources/Flowy/Feedback/: FeedbackPlayer.swift
Frontend/Sources/Flowy/History/: HistoryStore.swift
Frontend/Sources/Flowy/Hotkey/: HotkeyMonitor.swift  HotkeyRecorderView.swift
Frontend/Sources/Flowy/Overlay/: AssistantSettingsView.swift  (+9 more)
Frontend/Sources/Slive/: AppDelegate.swift  Log.swift  MachineProfile.swift  SelfTest.swift  Settings.swift  SpeakingStats.swift  main.swift
(+59 files in other folders)
