[project]
name = "flowy"
version = "0.1.0"
description = "Local speech translation experiments with Gemma 4"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "accelerate>=1.10.0",
  "fastapi>=0.139.0",
  "faster-whisper>=1.2.1",
  "httpx>=0.27",
  "librosa>=0.11.0",
  "pillow>=11.3.0",
  "soundfile>=0.13.1",
  "torch>=2.8.0",
  "transformers>=5.10.1",
  "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[project.scripts]
flowy-translate = "flowy.cli:main"
flowy-server = "flowy.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
